Fix spacing for uploaded license file titles
Without these changes the title of the uploaded file could be
needlessly split onto multiple lines because its container was
needlessly too narrow. Observed when the file had dashes, as
with `my-license.pdf`, on the facility credentials step for
Day Treatment and PCPO applications. (I think these styles were
originally for the spans with right-aligned colons that are no
longer there. What else would need to be so narrow?)

Issue #158 "No file selected" is confusing when a file is uploaded

--- a/psm-app/cms-web/WebContent/css/style.css
+++ b/psm-app/cms-web/WebContent/css/style.css
@@ -1429,8 +1429,7 @@ input.date{
   margin:0 0 0 7px;
 }
 
-.practicePanel span.floatL{
-  width:1%;
+.practicePanel span.floatL {
   margin:0;
 }
 
@@ -4221,9 +4220,6 @@ input.passwordNormalInput{
 }.memberInfoPanel .section .inlineBox label{
   display: inline;
   width: auto;
-}
-.memberInfoPanel .section span.floatL{
-  width: 5px;
 }
 .memberInfoPanel .section span.floatL.inputCnt{
   width: 552px;
